--- a/Web/Content/Site.css
+++ b/Web/Content/Site.css
@@ -28,3 +28,23 @@ textarea {
     float: left;
     margin: 5px 5px;
 }
+
+
+.cards {
+    margin: 0;
+    padding: 0;
+}
+
+.card {
+    display: inline-block;
+    vertical-align: top;
+    width: 300px;
+    min-height: 150px;
+    margin: 10px;
+    padding: 2px 5px;
+    border: 1px dotted gray;
+}
+
+.card:hover {
+    background-color: lightgray;
+}
