--- a/Web/Views/Home/InitiativeList.cshtml
+++ b/Web/Views/Home/InitiativeList.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Web.Models
 
-
 @model InitiativesModel
 @{
     ViewBag.Title = "Initiatives";
@@ -9,22 +8,19 @@
 
 @section scripts
 {
-    <script src="~/Scripts/Pages/Initiatives.js"></script>
+    <script src="~/Scripts/Pages/initiativeList.js"></script>
 
     <script>
         $().ready(function() {
 
-            // site.page.links.homePageLink = "@Url.Action("Index", "Home")";
+            site.page.links.initiativeUrl = "@Url.Action("Initiative", "Home")" + '?initiativeId={0}';
 
             console.log("Main Page");
             var serverData = @Html.Raw(Json.Encode(new
-            {
-                Initiatives = Model?.Initiatives
-            }));
+                             {
+                                 Initiatives = Model?.Initiatives
+                             }));
 
-          
-            console.log(serverData);
-           
             site.page.viewModel = site.createViewModel(serverData);
             ko.applyBindings(site.page.viewModel);
         });
@@ -37,12 +33,16 @@
     <p class="lead">Below is a list of available causes & inititatives for you</p>
 </div>
 
-<div class="row">
-    <div class="col-md-4" data-bind="foreach: initiatives">
-        <h2 data-bind="text: title"></h2>
+<div data-bind="foreach: initiatives">
+    <div class="card" data-bind="click: redirect">
+        <h3 data-bind="text: title"></h3>
         <p data-bind="text: description"></p>
-    </div>
+    </div> 
 </div>
+
+
+
+
 
 
 
