--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -7,24 +7,22 @@
     
     <div>
         <img src="~/Content/Images/brite4grad.png" class="img-rounded, InlineImage" width="300" alt="Grad4Brite"/>
-        <p class="lead">There will always be demand and supply forces in te market, in the digital 
-            information era we live in today we have seen a masive shift in how players on both sides
+        <p class="lead">There will always be demand and supply forces in the market, in the digital 
+            information era we live in today we have seen a massive shift in how players on both sides
             are being connected with each other.</p>
     </div>
-
     <br />
  
+    <p class="lead">The likes of Facebook, Twitter, Uber, Airbnb and many others have proven that becoming a platform
+     that understands how to connect the demand with the supply can be more powerful than filling the need yourself.</p>
     
-    <p class="lead">The Facebooks, Twitter, Uber, Airbnb and many others have proven that becomming a plarform
-     that understands how to connect the demand with the supply can be more powerfull that filling a need yourself.</p>
-    
-    <p class="lead">You have been given a basic portal that filters candidates to initiatives (Match Demand and Supply), this is done in a very manual way by asking 
-    basic questions (Yes/No or Multiple Choice) to the next level by considering one or more of the following areas:</p>
+    <p class="lead">You have been given a basic portal that filters applicants to initiatives (Match Demand and Supply), this is done in a quiz approach 
+    using basic types of questions (Yes/No or Multiple Choice). Your task is to take it to the next level by considering one or more of the following areas:</p>
+   
     <ul>
-        <li>Not just on fulfilling their ultimate needs but the experience to get there (Elagant UX)</li>
-        <li>People have a high reliance on recomendations to reduce noise (Improved matching / suggestions)</li>
-        <li>Expand current challenge types, add more exiting and engaging challenges</li>
+        <li>UX: Improve the user experience during matching</li>
+        <li>Algorithm: Improve the matching logic</li>
+        <li>Challenge types: Add more challenge types than Yes/No and Multiple Choice</li>
     </ul>
-
 </div>
 
