--- a/Web/Views/Home/Initiative.cshtml
+++ b/Web/Views/Home/Initiative.cshtml
@@ -10,8 +10,12 @@
     <script src="~/Scripts/Pages/initiative.js"></script>
 
     <script>
+
+        site.page.links.registerUrl = "@Url.Action("Register", "Home")";
+
         var serverData = @Html.Raw(Json.Encode(new
                          {
+                             InitiativeId = Model.Id,
                              Challenges = Model.Challenges
                          }));
 
@@ -24,46 +28,58 @@
         });
 
     </script>
-
 }
 
 <h2>@Model.Title</h2>
 <p>@Model.Description</p>
 
-<p><i>Completed <span data-bind="text: numberOfCompleted"></span> out of <span data-bind="text: numberOfQuestions"></span> challenges.</i></p>
+<div class="wrapper" data-bind="visible: !isCompleted()">
+    <p><i>Completed <span data-bind="text: numberOfCompleted"></span> out of <span data-bind="text: numberOfQuestions"></span> challenges.</i></p>
+    <div clas="row">
+        <div class="col">Email: </div>
+        <div class="col">
+            <input type="text" data-bind="value: email" />
 
-<div class="carousel">
-    <!-- ko foreach: challenges -->
-    <div>
-        <p data-bind="text: question"></p>
-        
-        <div style="display: none" data-bind="visible: type == challengeTypeEnum.YesNo">
-            <select data-bind="options: site.page.viewModel.yesNoOptions(), optionsValue: 'value' , optionsText: 'label', value: answer">
-            </select>
-        </div>
-
-        <div style="display: none" data-bind="visible: type == challengeTypeEnum.MultiChoice">
-            <table>
-                <tr>
-                    <td><input type="radio" name="option" value="A" data-bind="checked: answer()"/></td>
-                    <td><span data-bind="text: optionA" ></span></td>
-                </tr>
-                <tr>
-                    <td><input type="radio" name="option" value="B" data-bind="checked: answer()"/></td>
-                    <td><span data-bind="text: optionB"></span></td>
-                </tr>
-                <tr>
-                    <td><input type="radio" name="option" value="C" data-bind="checked: answer()" /></td>
-                    <td><span data-bind="text: optionC"></span></td>
-                </tr>
-                <tr>
-                    <td><input type="radio" name="option" value="D" data-bind="checked: answer()" /></td>
-                    <td><span data-bind="text: optionD"></span></td>
-                </tr>
-            </table>
         </div>
     </div>
-    <!-- /ko -->
+    <div class="carousel">
+    
+        <!-- ko foreach: challenges -->
+        <div>
+            <p data-bind="text: question"></p>
+
+            <div style="display: none" data-bind="visible: type == challengeTypeEnum.YesNo">
+                <select data-bind="options: site.page.viewModel.yesNoOptions(), optionsValue: 'value' , optionsText: 'label', value: answerYesNo">
+                </select>
+            </div>
+
+            <div style="display: none" data-bind="visible: type == challengeTypeEnum.MultiChoice">
+                <table>
+                    <tr>
+                        <td><input type="radio" value="A" data-bind="checked: answerMulti"/></td>
+                        <td><span data-bind="text: optionA"></span></td>
+                    </tr>
+                    <tr>
+                        <td><input type="radio" value="B" data-bind="checked: answerMulti"/></td>
+                        <td><span data-bind="text: optionB"></span></td>
+                    </tr>
+                    <tr>
+                        <td><input type="radio" value="C" data-bind="checked: answerMulti"/></td>
+                        <td><span data-bind="text: optionC"></span></td>
+                    </tr>
+                    <tr>
+                        <td><input type="radio" value="D" data-bind="checked: answerMulti"/></td>
+                        <td><span data-bind="text: optionD"></span></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- /ko -->
+    
+    </div>
+    <input type="button" value="Register" data-bind="click: register, enable: numberOfQuestions() == numberOfCompleted()" />
 </div>
- 
+<label data-bind="text: errorMessage" class="errorText"></label>
+<label data-bind="text: successMessage" class="successText"></label>
+
 
