--- a/Web/Views/Home/InitiativeList.cshtml
+++ b/Web/Views/Home/InitiativeList.cshtml
@@ -30,7 +30,7 @@
 
 <div class="jumbotron">
     <h1>Initiatives</h1>
-    <p class="lead">Below is a list of available causes & inititatives for you</p>
+    <p class="lead">Below is a list of available causes & initiatives for you</p>
 </div>
 
 <div data-bind="foreach: initiatives">
